Breaks down the visual style sheet into functions

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -4526,7 +4526,7 @@
   font-weight: bold;
 }
 /* line 126, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
-.x-panel-developer .source-code-pro-regular {
+.x-panel-developer .courier-new-regular {
   font-family: "Courier New", Courier, monospace;
 }
 /* line 134, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
