--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -92,6 +92,15 @@
    * Meta styles for the visual style sheet
    */
 
+  .hbox {
+    float: left;
+    margin-right: 20px;
+  }
+
+  .vbox {
+    margin-bottom: 20px;
+  }
+
   .category {
     padding-bottom: 2em;
     border-bottom: 1px $color-gainsboro solid;
@@ -108,6 +117,17 @@
     font-size: $font-size-h5;
     padding-bottom: 5px;
     text-transform: uppercase;
+  }
+
+  table thead th {
+    font-size: $font-size-h5;
+    text-transform: uppercase;
+    text-align: left;
+  }
+
+  table tbody tr .color {
+    height: 10px;
+    width: 10px;
   }
 
   /*
