--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -13726,3 +13726,33 @@
   border-bottom: 1px solid white;
   border-left: 1px solid #cbcbcb;
 }
+
+/**
+* @class Ext.ux.form.MultiSelect
+*/
+/* line 5, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss */
+.nx-multiselect {
+  /*.x-boundlist-list-ct {
+    border-top: 1px $color-night-rider solid;
+  }*/
+}
+/* line 6, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss */
+.nx-multiselect .x-panel-header {
+  background-color: transparent;
+  border: none;
+  padding-left: 0;
+  padding-bottom: 9px;
+  padding-right: 0;
+}
+/* line 13, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss */
+.nx-multiselect .x-panel-header .x-header-text {
+  color: #333333;
+}
+/* line 18, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss */
+.nx-multiselect .x-form-item .x-form-trigger-wrap {
+  margin-bottom: 9px;
+}
+/* line 22, ../../../baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss */
+.nx-multiselect .x-panel-body {
+  border: 1px #dddddd solid !important;
+}
