Adds tools back to treepanel and makes them visible

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tree/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tree/Panel.scss
@@ -7,5 +7,6 @@
   $ui-header-color: $color-night-rider,
   $ui-header-glyph-color: $color-night-rider,
   $ui-header-glyph-opacity: 0.75,
-  $ui-header-background-color: $color-white
+  $ui-header-background-color: $color-white,
+  $ui-tool-background-image: 'tools/tool-sprites-dark'
 );
