Increases contrast between enabled/disabled button states

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
@@ -19,7 +19,7 @@
   $color-over: $color-night-rider,
   $color-focus: $color-night-rider,
   $color-pressed: $color-white,
-  $color-disabled: $color-night-rider,
+  $color-disabled: $color-dark-gray,
 
   $glyph-color: $color-night-rider,
   $glyph-opacity: 1
@@ -55,7 +55,7 @@
   $color-over: $color-night-rider,
   $color-focus: $color-night-rider,
   $color-pressed: $color-white,
-  $color-disabled: $color-night-rider,
+  $color-disabled: $color-dark-gray,
 
   $glyph-color: $color-night-rider,
   $glyph-opacity: 1
