--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
@@ -26,7 +26,16 @@ $button-small-font-weight-focus: $font-weight-body;
 $button-small-font-weight-pressed: $font-weight-body;
 $button-small-font-weight-disabled: $font-weight-body;
 
-$button-disabled-opacity: 50%;
-
 $button-default-glyph-color: $color-white;
 $button-default-glyph-opacity: 1;
+
+$button-toolbar-color: $color-night-rider;
+$button-toolbar-color-over: $color-night-rider;
+$button-toolbar-color-focus: $color-night-rider;
+$button-toolbar-color-pressed: $color-night-rider;
+$button-toolbar-color-disabled: $color-night-rider;
+
+$button-toolbar-glyph-color: $color-night-rider;
+$button-toolbar-glyph-opacity: 1;
+
+$button-disabled-opacity: 0.5;
