Fixes bugs with focus states
+ Makes focus state override the error state for form fields
+ Excludes tabs from link state treatment

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -120,7 +120,7 @@ $font-weight-utility:   normal;
  * Links
  */
 
-a:not(.x-btn) {
+a:not([class*="x-"]) {
   color: $color-navy-blue;
   text-decoration: none;
 
