--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/form/field/Base.scss
@@ -2,4 +2,4 @@
  * @class Ext.form.field.Base
  */
 
-$form-field-focus-border-color: $color-cornflower;
+$form-field-focus-border-color: $color-cornflower !important;
