--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_01.css
@@ -79,21 +79,21 @@
  * Links
  */
 /* line 123, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
-a:not(.x-btn) {
+a:not([class*="x-"]) {
   color: #006bbf;
   text-decoration: none;
 }
 /* line 127, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
-a:not(.x-btn):visited {
+a:not([class*="x-"]):visited {
   color: #014e8a;
 }
 /* line 131, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
-a:not(.x-btn):focus, a:not(.x-btn):hover {
+a:not([class*="x-"]):focus, a:not([class*="x-"]):hover {
   color: #77162d;
   text-decoration: underline;
 }
 /* line 136, ../../../baseapp/packages/rapture-theme/sass/etc/all.scss */
-a:not(.x-btn):active {
+a:not([class*="x-"]):active {
   color: #96caee;
 }
 
@@ -15449,7 +15449,7 @@ div.x-lbl-top-err-icon {
 
 /* line 34, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Text.scss */
 .x-form-focus {
-  border-color: #96caee;
+  border-color: #96caee !important;
 }
 
 /* line 39, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/form/field/Text.scss */
@@ -23689,7 +23689,7 @@ a.x-color-picker-item:hover {
 }
 /* line 22, ../../../baseapp/ext/packages/ext-theme-neptune/sass/src/form/field/Trigger.scss */
 .x-form-trigger-wrap-focus .x-form-trigger-wrap {
-  border-color: #96caee;
+  border-color: #96caee !important;
 }
 /* line 26, ../../../baseapp/ext/packages/ext-theme-neptune/sass/src/form/field/Trigger.scss */
 .x-form-invalid .x-form-trigger-wrap {
